src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Locations_Interested__c</fullName>
        <label>Locations Interested</label>
        <picklist>
            <picklistValues>
                <fullName>AMS-Labs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMS-Metropool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMS-Weteringschans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATL-Buckhead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUS-Congress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUS-Labs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUS-University Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEV-Be&apos;er Sheva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BKN-Brooklyn Heights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BKN-Dumbo Heights (Prospect)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BKN-Dumbo Heights (Sands)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BKN-South Williamsburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BKN-Williamsburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL-Hackescher Markt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL-Sony Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOS-Fort Point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOS-Labs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOS-South Station</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHI-Fulton Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHI-Grant Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHI-Kinzie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHI-Labs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHI-River North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC-Chinatown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC-Crystal City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC-Dupont Circle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC-K Street</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC-Labs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC-Manhattan Laundry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC-Wonder Bread Factory</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No mail forwarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No response to follow up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed at other WeWork location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commons</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mail_and_Package_Handling__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will let us know whether or not to add the mail and package handling line item to an invoice.</inlineHelpText>
        <label>Mail and Package Handling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Qualification__c</fullName>
        <formula>TEXT(Account.Member_Qualification__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>this field is set on the related Account</inlineHelpText>
        <label>Member Qualification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to contact. Contact status must be Active</description>
        <label>Member Referrer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Status__c</field>
                <operation>equals</operation>
                <value>active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Member Referrer)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Membership_Agreement_Notes__c</fullName>
        <label>Membership Agreement Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Migrated_Follow_Up_Notes__c</fullName>
        <inlineHelpText>This field is used for the reference. DO NOT use to log any new notes. Use Activities instead.</inlineHelpText>
        <label>Migrated Follow Up Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Minimum_Notice__c</fullName>
        <label>Minimum Notice (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Stay__c</fullName>
        <label>Minimum Stay (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment_Method__c</fullName>
        <label>Monthly Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Payment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monthly_Phone_Fee_Text__c</fullName>
        <formula>IF(Monthly_Phone_Fee__c &lt; 0, &quot;(&quot;, &quot;&quot;) &amp; &quot;$&quot; &amp;
IF(ABS(Monthly_Phone_Fee__c) &gt;= 1000000, TEXT(FLOOR(ABS(Monthly_Phone_Fee__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
IF(ABS(Monthly_Phone_Fee__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(Monthly_Phone_Fee__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(ABS(Monthly_Phone_Fee__c))), 3) &amp; &quot;.&quot; &amp;
IF(MOD(ABS(Monthly_Phone_Fee__c) , 1) * 100 &lt; 10, &quot;0&quot; &amp; TEXT(ROUND(MOD(ABS(Monthly_Phone_Fee__c) , 1), 2) * 100), TEXT(MIN(ROUND(MOD(ABS(Monthly_Phone_Fee__c) , 1), 2) * 100, 99))) &amp;
IF(Monthly_Phone_Fee__c &lt; 0, &quot;)&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Phone Fee (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Phone_Fee__c</fullName>
        <label>Monthly Phone Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Prints_B_W_Total__c</fullName>
        <label>Monthly Prints B&amp;W Total</label>
        <summarizedField>Opportunity_Reservable__c.Monthly_Prints_Copies_B_W__c</summarizedField>
        <summaryForeignKey>Opportunity_Reservable__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Monthly_Prints_Color_Total__c</fullName>
        <label>Monthly Prints Color Total</label>
        <summarizedField>Opportunity_Reservable__c.Monthly_Prints_Copies_Color__c</summarizedField>
        <summaryForeignKey>Opportunity_Reservable__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Monthly_Prints_Copies__c</fullName>
        <formula>&quot;B&amp;W: &quot;&amp;TEXT(Monthly_Prints_B_W_Total__c )&amp;&quot;  Color: &quot;&amp; TEXT(Monthly_Prints_Color_Total__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Prints/Copies</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negotiated_Price__c</fullName>
        <label>Negotiated Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Desks__c</fullName>
        <label>Net Desks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network_Monthly_Conference_Room_Credits__c</fullName>
        <label>Network Monthly Conference Room Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network_Monthly_Membership_Fee__c</fullName>
        <label>Network Monthly Membership Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Network_Set_Up_Fee__c</fullName>
        <label>Network Set-Up Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <picklist>
            <picklistValues>
                <fullName>CM Action Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wait List Offered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paperwork Offered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Another Tour</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_Show__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Show</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Interested_Reason__c</fullName>
        <label>Not Interested Reason</label>
        <picklist>
            <controllingField>Lost_Reason__c</controllingField>
            <picklistValues>
                <fullName>Too Expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Configuration Unsuitable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultural Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;m not ready for an office quite yet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I found another office space solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing is not in my budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location isn&apos;t ideal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Desks__c</fullName>
        <label>Number of Desks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_phones__c</fullName>
        <label>Number of phones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSPM__c</fullName>
        <label>OSPM</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Office_Available__c</fullName>
        <label>Office Available</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Office_Conference_Room_Credits__c</fullName>
        <label>Office Conference Room Credits</label>
        <summarizedField>Opportunity_Reservable__c.Conference_Room_Credits__c</summarizedField>
        <summaryForeignKey>Opportunity_Reservable__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Office_Hold_Expires__c</fullName>
        <label>Office Hold Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Office_Type_Notes__c</fullName>
        <inlineHelpText>Use this field if need to add additional information only. For number of desks use the field Number of Desks.</inlineHelpText>
        <label>Office Type Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Type__c</fullName>
        <label>Office Type</label>
        <picklist>
            <picklistValues>
                <fullName>Shared Desk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Desk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot desk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dedicated Desk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private 1 Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private 2 Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private 3 Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private 4 Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private 5 Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private 6 Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private 8 Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private 10 Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lounge Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private 10 Person+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commons</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Building_Text__c</fullName>
        <label>Opportunity Building Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Reservable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Reservable</label>
        <referenceTo>Opportunity_Reservable__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Lost_Reason__c</fullName>
        <label>Other Lost Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Our_next_steps__c</fullName>
        <label>Our next steps</label>
        <picklist>
            <picklistValues>
                <fullName>Send paperwork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Place an office on temporary hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add to wait list</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule additional tour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send additional information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow up on their decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None, no longer interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_s_Role__c</fullName>
        <formula>Owner.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner&apos;s Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parking_Fees_Text__c</fullName>
        <formula>IF(Parking_Fees__c &lt; 0, &quot;(&quot;, &quot;&quot;) &amp; &quot;$&quot; &amp;
IF(ABS(Parking_Fees__c) &gt;= 1000000, TEXT(FLOOR(ABS(Parking_Fees__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
IF(ABS(Parking_Fees__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(Parking_Fees__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(ABS(Parking_Fees__c))), 3) &amp; &quot;.&quot; &amp;
IF(MOD(ABS(Parking_Fees__c) , 1) * 100 &lt; 10, &quot;0&quot; &amp; TEXT(ROUND(MOD(ABS(Parking_Fees__c) , 1), 2) * 100), TEXT(MIN(ROUND(MOD(ABS(Parking_Fees__c) , 1), 2) * 100, 99))) &amp;
IF(Parking_Fees__c &lt; 0, &quot;)&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parking Fees (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parking_Fees__c</fullName>
        <label>Parking Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Authorization_Signed_By__c</fullName>
        <label>Payment Authorization Signed By</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorized Signatory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Details_Status__c</fullName>
        <label>Payment Details Status</label>
        <picklist>
            <picklistValues>
                <fullName>Form Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Details Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete Details</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Error_Message__c</fullName>
        <label>Payment Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Form_Link__c</fullName>
        <formula>HYPERLINK(Payment_Form_URL__c,&quot;Payment Detail Form&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Form Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Form_URL__c</fullName>
        <formula>Payment_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Form URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Status_Code__c</fullName>
        <label>Payment Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_URL__c</fullName>
        <label>Payment URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Permit_Copy_Provided__c</fullName>
        <label>Permit Copy Provided</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_Setup_Fee__c</fullName>
        <label>Phone Setup Fee</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_Network_Membership__c</fullName>
        <formula>IF(ISPICKVAL( Type__c ,&quot;Premium Network Membership&quot;),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premium Network Membership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Member_Address__c</fullName>
        <label>Primary Member Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Member_City__c</fullName>
        <label>Primary Member City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Member_Email_New__c</fullName>
        <formula>Primary_Member__r.Email</formula>
        <label>Primary Member Email New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Member_Email__c</fullName>
        <label>Primary Member Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Member_First_Name__c</fullName>
        <formula>Primary_Member__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Member First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Member_Id__c</fullName>
        <formula>Account.Primary_Member__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Member Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Member_Name__c</fullName>
        <formula>Account.Primary_Member__r.FirstName &amp;&quot; &quot;&amp; Account.Primary_Member__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Member Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Member_State__c</fullName>
        <label>Primary Member State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Member_Zip__c</fullName>
        <label>Primary Member Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Member</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Priority field suggests priority or urgency of the Opportunity as per the Sales Rep. This field is being introduced based on request of Enterprise Sales.</description>
        <inlineHelpText>This Priority describes priority or hotness of the Opportunity how soon or likely will it close. Lower number means higher probability of closing the deal soon.</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pro_Forma_Price__c</fullName>
        <label>Pro Forma Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Provide_Copy_of_Voided_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provide Copy of Voided Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referal_Detail__c</fullName>
        <label>Referral Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_ID__c</fullName>
        <label>Referral ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Building_Email2__c</fullName>
        <label>Referrer Building Email2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referrer_Building__c</fullName>
        <formula>Member_Referrer__r.Location__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer Building Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Name__c</fullName>
        <label>Referrer Name</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Qualification__c</fullName>
        <label>Referrer Qualification</label>
        <picklist>
            <picklistValues>
                <fullName>n/a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Referrer who referred to the current opportunity.</description>
        <label>Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Referred)</relationshipLabel>
        <relationshipName>ReferredOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reservation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reservation</label>
        <referenceTo>Reservation__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Returned_Check_Fee__c</fullName>
        <label>Returned Check Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Routing_Number__c</fullName>
        <label>Routing Number</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Schedule_Tour_Web_Form_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://welcome.wework.com/forms/schedulenewtour.php?oppId=&quot;&amp; Id ,&quot;Schedule Tour&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule Tour Web Form Link (test)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Security?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Contract_Button_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Contract Button Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Contract__c</fullName>
        <formula>IF( ISBLANK(Building__c) ,&quot;Select Building&quot;, 
IF( ISBLANK(Primary_Member__c ), &quot;Select Primary Member&quot;, 
IF( ISBLANK( Primary_Member__r.Email ), &quot;Set Primary Member&apos;s email&quot;, 
IF( AND(NOT(ISBLANK(  Account.Authorized_Signatory__c  )), ISBLANK( Account.Authorized_Signatory__r.Email)),  &quot;Set Authorized Signatory email&quot;, 
IF( AND(Total_Reservables_Selected__c &gt;0,  not(ispickval(Type__c, &quot;Internal Transfer&quot;)), NOT(ispickval(Type__c, &quot;Office Space&quot;))), &quot;Set Type to Office Space or Internal Transfer if you have reservables selected&quot;, 
IF ( AND(OR(ISPICKVAL(Type__c, &quot;Office Space&quot;),ISPICKVAL(Type__c, &quot;Internal Transfer&quot;)), Total_Reservables_Selected__c =0), &quot;Add a Reservable&quot;, 
IF ( ISBLANK ( Actual_Start_Date__c ), &quot;Enter Actual Start Date&quot;, 
IF ( AND(not(ispickval(Type__c, &quot;Office Space&quot;)), ISBLANK(Network_Set_Up_Fee__c )), &quot;Enter Network Setup Fee&quot;, 
IF ( AND(not(ispickval(Type__c, &quot;Office Space&quot;)), ISBLANK(Network_Monthly_Conference_Room_Credits__c )), &quot;Enter Network Conference Room Credits&quot;, 
IF( OwnerId &lt;&gt; $User.Id , &quot;Change Opportunity Owner to yourself&quot;, 
IF ( AND(not(ispickval(Type__c, &quot;Office Space&quot;)), ISBLANK(Network_Monthly_Membership_Fee__c)), &quot;Enter Network Monthly Membership Fee&quot;, 
IF( ISPICKVAL( StageName , &quot;Contract Sent&quot;), &quot;Contract has been sent&quot;, 
HYPERLINK(&quot;/apex/SendContract?id=&quot;&amp; Id, IMAGE(&quot;http://e.wework.com/l/37722/2014-05-14/bgjp/37722/15788/Send_Contract.jpg&quot;, &quot;Send Contract&quot;) , &quot;_blank&quot;) 
)
)
)
) 
) 
) 
) 
) 
) 
) 
) 
)</formula>
        <inlineHelpText>Follow instruction in this field until the &quot;Send Contract&quot; button appears. Required fields on the Opportunity must be filled out in order to send out a contract.</inlineHelpText>
        <label>Send Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Setup_Fee_Text__c</fullName>
        <formula>IF(Setup_Fee__c &lt; 0, &quot;(&quot;, &quot;&quot;) &amp; &quot;$&quot; &amp;
IF(ABS(Setup_Fee__c) &gt;= 1000000, TEXT(FLOOR(ABS(Setup_Fee__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
IF(ABS(Setup_Fee__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(Setup_Fee__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(ABS(Setup_Fee__c))), 3) &amp; &quot;.&quot; &amp;
IF(MOD(ABS(Setup_Fee__c) , 1) * 100 &lt; 10, &quot;0&quot; &amp; TEXT(ROUND(MOD(ABS(Setup_Fee__c) , 1), 2) * 100), TEXT(MIN(ROUND(MOD(ABS(Setup_Fee__c) , 1), 2) * 100, 99))) &amp;
IF(Setup_Fee__c &lt; 0, &quot;)&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Setup Fee (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Setup_Fee__c</fullName>
        <label>Setup Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Setup_Staff__c</fullName>
        <label>Setup Staff</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Signed_By_Name__c</fullName>
        <formula>IF( ISBLANK(Account.Authorized_Signatory__c) , Account.Primary_Member__r.FirstName &amp;&quot; &quot;&amp;Account.Primary_Member__r.LastName, Account.Authorized_Signatory__r.FirstName &amp;&quot; &quot;&amp;Account.Authorized_Signatory__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signed By Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signed_By_Type__c</fullName>
        <formula>IF(ISBLANK( Account.Authorized_Signatory__c ),&quot;Primary&quot;,&quot;Authorized Signatory&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signed By Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signed_Contract_URL__c</fullName>
        <label>Signed Contract URL</label>
        <type>Url</type>
    </fields>
</CustomObject>